--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,20 @@
 main {
-    min-height: 80vh;
-  }
-  
-  h3{
-    padding: 1rem 0;
-  }
+  min-height: 80vh;
+}
 
-  .rating span{
-    margin: 0.1 rem;
-  }
+h3 {
+  padding: 1rem 0;
+}
+
+h1 {
+  font-size: 1.4rem;
+  padding: 0.1rem;
+}
+
+h2{
+  font-size: 1.4rem;
+  padding: 0.5 0; 
+}
+.rating span {
+  margin: 0.1 rem;
+}
